welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:11: error: reassignment to val
				die1=die1+1;
                                    ^withoutDoubles:15: error: reassignment to val
				die1=1;
                                    ^